# Neuro-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emulator_test  gbemu  main.cpp
DOC/: Command.txt
doc/: Commands.md
emulator/: cpu.cpp  cpu.h  joypad.cpp  joypad.h  main.cpp  memory.cpp  memory.h  opcode.cpp  opcode.h
src/: cpu.cpp  cpu.h  cpu_cb.cpp  cpu_cb.h  gb.cpp  joypad.cpp  joypad.h  main.cpp  memory.cpp  memory.h  opcode_cycles.h  reg.h
src/cartridge/: cartridge.cpp  cartridge.h
src/cpu/: CMakeLists.txt  CPU.cpp  CPU.h  CPURegisters.h  cpu.cpp  cpu.h  instr_func.cpp  instr_table.cpp  instr_table.h  instruction_Catagory.txt  reg.cpp
src/memory/: CMakeLists.txt  Memory.cpp  Memory.h
src/mmu/: mmu.cpp  mmu.h
